--- a/paginas/cursos/Csharp/curso-csharp.html
+++ b/paginas/cursos/Csharp/curso-csharp.html
@@ -11,7 +11,9 @@
       <h1>Página :: CSHARP ::</h1>
     </div>
     <div>
-      <img src="/img/c-sharplogo.png" id="img-csharp" />
+      <img src="../../../img/c-sharplogo.png" id="img-csharp" />
     </div>
+
+    <a href="../../../pagina-inicial.html">Voltar</a>
   </body>
 </html>
