--- a/paginas/cursos/Java/curso-java.html
+++ b/paginas/cursos/Java/curso-java.html
@@ -12,7 +12,9 @@
     </div>
 
     <div>
-      <img src="/img/java.jpg" />
+      <img src="../../../img/java.jpg" />
     </div>
+
+    <a href="../../../pagina-inicial.html">Voltar</a>
   </body>
 </html>
