--- a/paginas/cursos/Python/curso-python.html
+++ b/paginas/cursos/Python/curso-python.html
@@ -13,7 +13,9 @@
     </div>
 
     <div id="img-python">
-      <img src="/img/pythonlogo.png">
+      <img src="../../../img/pythonlogo.png">
     </div>
+    <a href="../../../pagina-inicial.html">Voltar</a>
+
   </body>
 </html>
