--- a/paginas/cursos/Ruby/curso-ruby.html
+++ b/paginas/cursos/Ruby/curso-ruby.html
@@ -12,7 +12,9 @@
     </div>
 
     <div id="img-ruby">
-      <img src="/img/rubylogo.jpg" class="img-ruby" />
+      <img src="../../../img/rubylogo.jpg" class="img-ruby" />
     </div>
+    <a href="../../../pagina-inicial.html">Voltar</a>
+
   </body>
 </html>
