--- a/paginas/cursos/Ruby/curso-ruby.html
+++ b/paginas/cursos/Ruby/curso-ruby.html
@@ -4,7 +4,7 @@
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width,initial-scale=1" />
     <title>RUBY</title>
-    <link rel="stylesheet" href="../../../css/style.css" />
+    <link rel="stylesheet" href="../../../css/global-style.css" />
   </head>
   <body>
     <div id="container">
