--- a/Paginas/Cursos/Csharp/curso-csharp.html
+++ b/Paginas/Cursos/Csharp/curso-csharp.html
@@ -4,7 +4,7 @@
     <meta charset="utf-8">
     <meta name="viewpoint" content="width=device-width,initial-scale=1">
     <title>::C#::</title>
-    <link rel="stylesheet" href="../Paginas/css/style.css"
+    <link rel="stylesheet" href="../../../css/style.css" type="text/css">
   </head>
   <body>
     <div id="container">
