--- a/Paginas/Cursos/Java/curso-java.html
+++ b/Paginas/Cursos/Java/curso-java.html
@@ -4,6 +4,7 @@
     <meta charset="utf-8">
     <meta name="viewpoint" content="width=device-width,initial-scale=1">
     <title>::JAVA::</title>
+    <link rel="stylesheet" href="../../../css/style.css" type="text/css">
   </head>
   <body>
     <div id="container">
@@ -11,11 +12,16 @@
       <div>
         <h2>Lista de Cursos</h2>
         <ul>
-          <li>INICIO</li>
-          <li>C#</li>
-          <li>Python</li>
-          <li>Ruby</li>
+          <li><a href="../Java/curso-java.html">Java</a></li>
+          <li><a href="../Csharp/curso-csharp.html">C#</a></li>
+          <li><a href="../Python/curso-python.html">Python</a></li>
+          <li><a href="../Ruby/curso-ruby.html">Ruby</a></li>
           </ul>
       </div>
+
+      <figure>
+        <img id="imgJava" src="../../../img/java.jpg" alt="Logo da lnguagem de programação Java">
+        <figcaption>História do Java</figcaption>
+      </figure>
   </body>
 </html>
