--- a/Paginas/Cursos/Python/curso-python.html
+++ b/Paginas/Cursos/Python/curso-python.html
@@ -4,6 +4,7 @@
     <meta charset="utf-8">
     <meta name="viewpoint" content="width=device-width,initial-scale=1">
     <title>::PYTHON::</title>
+    <link rel="stylesheet" href="../../../css/style.css" type="text/css">
   </head>
   <body>
     <div id="container">
